[tool.poetry]
name = "4-orig-proj-with-ci"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "4_orig_proj_with_ci"}]

[tool.poetry.dependencies]
python = "~3.10"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
